--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -12,14 +12,12 @@
 
         <EditText
             android:id="@+id/etUsername"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
             android:layout_alignParentLeft="true"
-            android:layout_alignParentRight="true"
             android:layout_alignParentStart="true"
-            android:layout_alignParentTop="true"
-            android:layout_marginTop="15dp"
+            android:layout_below="@+id/ivLogo"
+            android:layout_marginTop="54dp"
             android:ems="10"
             android:hint="Username"
             android:inputType="textPersonName" />
@@ -59,5 +57,14 @@
             android:layout_marginTop="23dp"
             android:text="REGISTER HERE"
             android:textSize="18sp" />
+
+        <ImageView
+            android:id="@+id/ivLogo"
+            android:layout_width="150dp"
+            android:layout_height="150dp"
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="19dp"
+            app:srcCompat="@drawable/musiccom_logo" />
     </RelativeLayout>
 </android.support.constraint.ConstraintLayout>
